[package]
name = "libftrace"
readme = "README.md"
exclude = ["examples/*.png"]

version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
libftrace_macros = { path = "macros", version = "=0.0.2" }
owo-colors = { version = "4.2", features = ["supports-colors"] }
time = { version = "0.3.2", features = ["formatting"] }

[features]
default = ["enabled"]
enabled = ["libftrace_macros/enabled"]

[workspace]
members = ["macros"]

[workspace.package]
version = "0.0.2"
authors = ["Max T. Kristiansen <me@maxtrier.dk>"]
description = "Extemely simple function tracer, useful for debugging"
keywords = ["tracing", "trace", "debug"]
categories = [
    "development-tools::build-utils",
    "visualization",
]
repository = "https://github.com/lume-lang/libftrace"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"
